2011-07-20  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: bug#351660
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (addMakeTargetsToManager): 
	Fix to always create a new MakeTarget rather than finding an existing one so that
	modifications made do not result in events being sent to project/workspace.

2011-07-14  Sami Wagiaalla  <swagiaal@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/MarkerGenerator.java (addMarker):
	Use argument problemMarkerInfo.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParserManager.java (addProblemMarker):
	New method.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParser.java:
	Implement IErrorParser.
	(ErrorParser): New no argument constructor.
	Remove epm instance variable.
	Add project instance variable.
	(processLine): New.
	(processLine): Use addProblemMarker.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsProblemMarkerInfo.java:
	Extend org.eclipse.cdt.core.ProblemMarkerInfo.
	(AutotoolsProblemMarkerInfo): Call super().
	* plugin.xml: Added ErrorParser to org.eclipse.cdt.core.ErrorParser
	extension point.

2011-07-13  Sami Wagiaalla  <swagiaal@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/MarkerGenerator.java (addMarker):
	Set the markers type attribute.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/IAutotoolsMarker.java (MARKER_PROBLEM_TYPE):
	New global constant.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParserManager.java (generateExternalMarker):
	Take type argument.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParser.java (getCheckType):
	Return AutotoolsProblemMarkerInfo.Type object instead of String.
	(processLine): Pass Type to generateMarker().
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsProblemMarkerInfo.java:
	Added Type enum.
	(type): New instance variable.