@@ -1,3 +1,10 @@
+2011-07-25  Jeff Johnston  <jjohnstn@redhat.com>
+
+	Resolves: bug#351660
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (addMakeTargetsToManager):
+	Fix to set MakeTargets to a single dummy target with invalid name to avoid MakeTargetManager from trying
+	to send out extraneous change event. 
+
 2011-07-20  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Resolves: bug#351660
